force-app/main/default/objects/Taxonomy_Run_Error_Log__c/Taxonomy_Run_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Errors happening during the Taxo Run will be logged into BSF Error Log and Then linked to the Taxo Run Record using this junction object.</description>
    <label>Taxonomy Run Error Log</label>
    <nameField>
        <displayFormat>TX-{0000}</displayFormat>
        <label>Taxonomy Run Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxonomy Run Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>