force-app/main/default/objects/Taxonomy_Run_Error_Log__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Links to BSF Error Log ApexClass Field. This will give information on the batch from which the error happened.</description>
    <formula>BSF_Error_Log_Id__r.ApexClass__c</formula>
    <label>ApexClass</label>
    <type>Text</type>
</CustomField>