force-app/main/default/objects/Taxonomy_Run_Error_Log__c/fields/BSF_Error_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>BSF_Error_Log_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the BSF Error Log.</description>
    <label>BSF Error Log Id</label>
    <referenceTo>BSF_Error_Log__c</referenceTo>
    <relationshipLabel>Taxonomy Run Error Log</relationshipLabel>
    <relationshipName>Taxonomy_Run_Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>