force-app/main/default/objects/Taxonomy_Run_Error_Log__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <description>Links to BSF Error Log Error Description Field.</description>
    <formula>BSF_Error_Log_Id__r.Error_Description__c</formula>
    <label>Error Description</label>
    <type>Text</type>
</CustomField>