force-app/main/default/objects/Taxonomy_Run_Error_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Links to BSF Error Log Method Field.</description>
    <formula>BSF_Error_Log_Id__r.Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Method</label>
    <type>Text</type>
</CustomField>