force-app/main/default/objects/Taxonomy_Run_Error_Log__c/fields/Taxonomy_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Run_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Taxo Run Record.</description>
    <label>Taxonomy Run Id</label>
    <referenceTo>Taxonomy_Run__c</referenceTo>
    <relationshipLabel>Taxonomy Run Error Log</relationshipLabel>
    <relationshipName>Taxonomy_Run_Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>